# metalgpu

./: .gitignore  Makefile  README.md
.github/workflows/: python-app.yml  python-package.yml
docs/: docs.md
examples/: Makefile  adder.py  operations.py  performance.py  performance_cos.py  performance_mat.py  performance_sqrt.py  performance_suite.py  shader.metal  test.py
metal-gpu-c/: CMakeLists.txt  Makefile  libmetalgpucpp.dylib
metal-gpu-c/src/: config.h  main.cpp  main.py  shader.metal
metal-gpu-c/src/api/: utils.cpp  utils.h
metal-gpu-c/src/instance/: instance.cpp  instance.h
metalgpu/: LICENSE  Makefile  README.md  pyproject.toml
metalgpu/src/metalgpu/: __init__.py  __main__.py  buffer.py  interface.py  interface_class.py  operators.py  shader.py  test.py  utils.py
